# dlt-providers

./: .gitignore  README.md  pyproject.toml
dlt_providers/: collectors.py  helpers.py
dlt_providers/sources/github/: __init__.py  helpers.py  settings.py
dlt_providers/sources/jira/: __init__.py  helpers.py
dlt_providers/sources/pg_replication/: __init__.py  constants.py  helpers.py
src/dlt_providers/sources/github/: __init__.py  helpers.py
src/dlt_providers/sources/mysql_replication/: __init__.py  constants.py  exceptions.py  helpers.py  schema_types.py
src/dlt_providers/sources/pg_replication/: __init__.py  exceptions.py  helpers.py  schema_types.py
tests/: base_dlt_e2e.py  mysql_replication_e2e.py  pg_replication_e2e.py
