[project]
name = "dlt-providers"
version = "0.0.0"
description = "Providers for data load tool (dlt)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["dlt==1.12.3", "connectorx==0.4.3", "pyarrow==20.0.0"]

[project.optional-dependencies]
pg_replication = ["psycopg2-binary==2.9.10"]
mysql_replication = [
    "mysql-replication==0.46.0",
    "cryptography==45.0.4",
    "plpygis==0.5.5",
]

[dependency-groups]
dev = ["dlt[duckdb]", "pydantic", "docker", "pandas", "numpy"]

[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"
