[project]
name = "dlt-providers"
version = "0.0.0"
description = "Providers for data load tool (dlt)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["dlt>=1.20.0,<1.21.0", "connectorx", "pyarrow"]

[project.optional-dependencies]
pg_replication = ["psycopg2-binary"]
mysql_replication = [
    "mysql-replication==0.46.0",
    "cryptography",
    "plpygis",
]

[dependency-groups]
dev = ["dlt[duckdb]", "pydantic", "docker", "pandas", "numpy"]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"
